2008-03-02  Michael Stucki  <michael@typo3.org>

	* Fixed bug #7291: Taskcenter -> sys_action - viewport is too small when creating records (patch by Steffen Kamper)

2008-03-01  Dmitry Dulepov  <dmitry@typo3.org>

	* Small cleanup in tslib (fixed use of uninitialized variables and added @var)

2008-03-01  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #5838: cli_dispatch.phpsh doesn't work on windows platforms

2008-02-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #4121: Pasting content on RTE moves cursor to the top of the text
	* Fixed bug #7716: htmlArea RTE plugins using some undeclared variables

2008-02-29  Michael Stucki  <michael@typo3.org>

	* Fixed bug #7545: Explain queries does not work when selecting multiple tables (patch by Ingo Schmitt)

2008-02-29  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #1358: Installer didn't honour forceCharset (patch by Masi)

2008-02-28  Jeff Segars  <jeff@webempoweredchurch.org>

	* Added feature #7150: Add pageUnavailable_handling for system problems and maintenance

2008-02-28  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #7684: htmlArea RTE: Cursor positioning when creating new table
	* Partially fixed bug #6714: htmlArea RTE: Poor tag handling everywhere in Opera

2008-02-28  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #7502: Show Sitename on Login screen (Thanks to Steffen Kamper)

2008-02-28  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #7630: Several problems with locking API (t3lib_lock)
	* Fixed bug #7700: Fatal error if caching is disabled and locking enabled (follow-up on bug #7630)
	* Fixed bug #5252: Pages with "Hide in menu" checked use normal page icon in list module (Thanks to Andreas Wagner)
	* Fixed bug #7693: New page wizard ignores "hide in menu" flag for page icons (Thanks to Christian Kuhn)

2008-02-27  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #7697: Syntax error raised by Mozilla 1.7 when loading htmlArea RTE